--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
        <button>Hire Me</button>
      </div>
    </div>
+   <div class="right">
+    <div class="image">
+      <img src="images/profile.JPG" alt="">
+    </div>
+   </div>
+   </div>
  </section>
  
     
